welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:1: error: Missing closing brace `}' assumed here
def teaParty(tea:Int, candy:Int): Int = {
^